# sanpo_dataset

./: CHANGELOG.md  Gemfile  README.md  _config.yml  page_index.md  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
sanpo_dataset/: __init__.py
sanpo_dataset/lib/: common.py  common_test.py  labelmap_open_source.json  labeltype_open_source.json  tensorflow_dataset.py  tensorflow_dataset_test.py
sanpo_dataset/lib/testdata/sanpo-real/real_session/: description.json
sanpo_dataset/lib/testdata/sanpo-real/real_session/camera_chest/: camera_poses.csv
sanpo_dataset/lib/testdata/sanpo-real/real_session/camera_chest/left/: frame_segmentation_annotation_type.json
sanpo_dataset/lib/testdata/sanpo-real/real_session/camera_head/: camera_poses.csv
sanpo_dataset/lib/testdata/sanpo-real/real_session2/: description.json
sanpo_dataset/lib/testdata/sanpo-real/real_session2/camera_chest/: camera_poses.csv
sanpo_dataset/lib/testdata/sanpo-real/splits/: test_session_ids.txt  train_session_ids.txt
sanpo_dataset/lib/testdata/sanpo-synthetic/splits/: test_session_ids.txt
sanpo_dataset/lib/testdata/sanpo-synthetic/synthetic_session/: description.json
sanpo_dataset/lib/testdata/sanpo-synthetic/synthetic_session/camera_chest/: camera_poses.csv
sanpo_dataset/lib/testdata/sanpo-synthetic/synthetic_session/camera_chest/left/: frame_segmentation_annotation_type.json
